# escrowproject

./: README.md
backend/: Cargo.toml  wallet.pem
backend/meta/: Cargo.toml
backend/output/: escrow_contract.abi.json  escrow_contract.mxsc.json  escrow_contract.wasm
backend/src/: lib.rs
backend/tests/: escrow_contract_test.rs
backend/wasm/: Cargo.toml
backend/wasm/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
