[package]
name = "escrow_contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Bu iki satırı eklemeniz gerekiyor:
[package.metadata.multiversx-sc]
name = "escrow_contract"
framework = "core"



[dependencies]
multiversx-sc = "0.55.0"

[dev-dependencies]
multiversx-sc-scenario = "0.55.0"

[workspace]
members = [".","meta"]
